# sccache-exclusive

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
docs/reviews/: 2026-05-31_code_review.1.md  2026-05-31_code_review.2.md
src/: main.rs
